--- a/Linh/app/build.gradle
+++ b/Linh/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.pavilion.listview"
+        applicationId "com.example.pavilion.linh"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
